--- a/persistence.ipynb
+++ b/persistence.ipynb
@@ -19,11 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scrapy\n",
+    "import scrapy # type: ignore\n",
     "import os\n",
     "current_dir = os.path.abspath('')\n",
     "url = os.path.join(current_dir, \"html/1992_World_Junior_Championships_in_Athletics_–_Men's_high_jump\")\n",
